<resources>
    <string name="app_name">RAF dnevnjak</string>
    <string name="title">RAF Dnevnjak</string>
    <string name="emailfield">email</string>
    <string name="usernamefield">username</string>
    <string name="passwordfield">password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">placeholder</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="calendar">Calendar</string>
    <string name="daily_plan">Daily plan</string>
    <string name="profile">Profile</string>
    <string name="account_not_found">Account not found.</string>
    <string name="wrong_pass">"Wrong password."</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="day_of_activities">day_of_activities</string>
    <string name="show_past_obligations">Show past obligations</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="activity_detail_hint">Type activity details here</string>
    <string name="name_of_activity">name_of_activity</string>
    <string name="time_of_activity">time_of_activity</string>
    <string name="day_of_activity">day_of_activity</string>
    <string name="activity">activity</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="titleofactivity">Title</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="empty_field">All fields must be filled.</string>
    <string name="overlap">You already have a activity in this timeframe:</string>
    <string name="internal_error">Internal error.</string>
    <string name="activity_name">Activity name</string>
    <string name="back">Back</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wen">Wen</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="login">Login</string>
    <string name="wrong_pass_format">Password has to be at least 5 characters, have at least 1 digit and i uppercase, and cant contain special characters.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="pass_not_match">Passwords have to match.</string>
    <string name="same_pass">New password cant be the same as old password.</string>
    <string name="pass_changed">Password changed.</string>
    <string name="save">Save</string>
</resources>