<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.activities.EditActivity"
    android:background="@color/background1"
    >

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/placeholder"
        android:background="@color/background3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/low" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/mid" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/high" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:background="@drawable/roundshape4"
        android:paddingStart="15dp"
        android:layout_margin="15dp"
        android:hint="@string/activity_name"
        />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:background="@drawable/roundshape4"
        android:paddingStart="15dp"
        android:layout_margin="15dp"
        android:hint="@string/time_of_activity" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:layout_weight="10"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:layout_margin="15dp"
        android:background="@drawable/roundshape4"
        android:paddingStart="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        >

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/roundshape2"
            android:text="@string/save"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/roundshape3"
            android:layout_marginHorizontal="5dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>