<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.fragments.DailyPlanFragment"
    android:backgroundTint="@color/background"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/day_of_activities"
        android:background="@color/background3"
        android:textAlignment="center"
        android:gravity="center"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@color/black"
        android:button="@null"
        android:checkMark="?android:attr/textCheckMark"
        android:checked="true"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/show_past_obligations" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/activity_name"
        android:inputType="textPersonName"
        android:background="@drawable/roundshape4"
        android:paddingStart="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low"
            android:backgroundTint="@color/loww"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mid"
            android:backgroundTint="@color/mid"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high"
            android:backgroundTint="@color/high"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_add"
            android:layout_gravity="end|bottom"
            android:layout_margin="30dp"
            android:contentDescription="@string/add_new_activity"
            />

    </FrameLayout>

</LinearLayout>