<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.activities.ChangePasswordActivity"
    android:gravity="center"
    android:background="@color/background"
    >

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginVertical="15dp"
        android:background="@drawable/roundshape"
        android:paddingStart="15dp"
        android:layout_margin="25dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:layout_marginVertical="15dp"
        android:background="@drawable/roundshape"
        android:paddingStart="15dp"
        android:layout_margin="25dp"
        />

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:background="@drawable/roundshape1"
        android:layout_marginVertical="15dp"
        android:layout_margin="25dp"
        />

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/roundshape1"
        android:layout_marginVertical="15dp"
        android:layout_margin="25dp"
        />
</LinearLayout>