<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.activities.ActivityDetails"
    android:background="@color/background5"
    android:id="@+id/linearLayout21"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:text="@string/day_of_activity"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/theme"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="15dp"
        android:text="@string/time_of_activity" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="15dp"
        android:text="@string/name_of_activity" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/roundshape4"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detailstiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundshape2"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundshape3"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>