<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.activities.LoginActivity"
    android:background="@color/background"
    >

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="50dp"
        android:hint="@string/emailfield"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/roundshape"
        android:paddingStart="15dp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:hint="@string/usernamefield"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/roundshape"
        android:paddingStart="15dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="50dp"
        android:hint="@string/passwordfield"
        android:inputType="textPassword"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/roundshape"
        android:paddingStart="15dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/theme"
        android:textColor="@color/black"
        android:layout_marginHorizontal="50dp"
        android:text="@string/login"
        android:background="@drawable/roundshape1"
        />
</LinearLayout>