<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/background"
    android:id="@+id/linearLayoutItem"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:contentDescription="@string/activity"
        app:srcCompat="@drawable/activity" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/time_of_activity" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/activity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        >

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/edit"
            app:srcCompat="@drawable/pen"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/delete"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_margin="2dp"
            />
    </LinearLayout>
</LinearLayout>