<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.sava_ivkovic_rn1220.activities.MainScreenActivity"
    android:backgroundTint="@color/theme"
    >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView5"
        android:name="rs.raf.projekat1.sava_ivkovic_rn1220.fragments.CalendarFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        tools:layout="@layout/fragment_calendar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/theme">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/calendar"
            android:text="@string/calendar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/daily_plan"
            android:text="@string/daily_plan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/profile"
            android:text="@string/profile" />
    </com.google.android.material.tabs.TabLayout>

</LinearLayout>